<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/chosenImageRight"
        android:layout_width="131dp"
        android:layout_height="86dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/chosen_image_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/chosenImageLeft"
        android:layout_width="125dp"
        android:layout_height="83dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/chosen_image_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/vsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/vs_title"
        app:layout_constraintEnd_toStartOf="@+id/chosenImageRight"
        app:layout_constraintStart_toEndOf="@+id/chosenImageLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/game_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drawTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw_title"
        app:layout_constraintEnd_toStartOf="@+id/drawResult"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lose_title"
        app:layout_constraintEnd_toStartOf="@+id/loseResult"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_result"
        app:layout_constraintStart_toEndOf="@+id/winTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drawResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loseResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lose_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>