<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp">


    <ImageView
        android:id="@+id/chosenImageRight"
        android:layout_width="131dp"
        android:layout_height="86dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/chosen_image_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/chosenImageLeft"
        android:layout_width="131dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/chosen_image_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/vsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/vs_title"
        app:layout_constraintEnd_toStartOf="@+id/chosenImageRight"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/chosenImageLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/game_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>